5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1807_2565.log
== TEST (2019-06-13 12:33:21) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:33:40) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.547739
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:33:45) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.650648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:33:54) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.74631
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:33:58) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:08) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.575909
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:34:14) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:14) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.654592
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:34:26) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:39) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.812209
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:40) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.14053
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:43) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
3.32505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:44) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
6.98045
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:44) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
6.22081
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:44) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
6.82857
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:44) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
6.53012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:44) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
6.15647
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:44) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
8.14283
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:50) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.03083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:51) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.32329
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:52) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.95946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:34:52) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.86617
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:00) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.07383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:03) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.38253
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:03) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.829644
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:08) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.94268
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:08) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
5.0336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:09) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
5.51639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:10) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
6.94262
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:11) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
6.25231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:12) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
5.697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:13) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
5.2988
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:13) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
6.53965
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:14) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
5.60986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:20) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
3.01413
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:22) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.41977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:22) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.73053
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:23) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.89867
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:25) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.85766
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:27) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
4.36133
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:28) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
4.40412
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:30) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
3.40763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:31) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
3.49283
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:32) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
3.28645
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:33) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.76379
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:37) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.86194
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:37) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.63269
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:38) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.41193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:38) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.47023
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:35:38) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.32117
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:39:17) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:17) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.827849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:21) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.95176
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:21) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.19305
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input("N: ")))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:21) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.80209
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:23) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.624985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:27) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.786945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:46) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.711591
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:49) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.581166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:39:50) 
-- CODE:
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.5389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2565/main.py", line 1, in <module>
    v1 = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:40:17) 
-- CODE:
from numpy import*
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.960095
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[2 0 3]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:40:21) 
-- CODE:
from numpy import*
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.37268
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
N: N: Digite: [5 1 4]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:40:22) 
-- CODE:
from numpy import*
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
2.41791
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2565/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 12:40:28) 
-- CODE:
from numpy import*
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
1.17548
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:02:57) 
-- CODE:
from numpy import*
v1 = array(eval(input("N: ")))
v2 = array(eval(input("N: ")))
v = int(input("Digite: "))
r = array(zeros(3, dtype =int))
for i in range(size(v1)):
	if(v1[i] < 5):
		r[1] = r[1]+1
	elif(v2[i] < (v * 75 // 100)):
		r[2] = r[2]+1
	else:
		r[0] = r[0]+1
print(r)
-- EXECUTION TIME:
0.913758
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
